fixed home page welcome banner visibility

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -11,12 +11,17 @@
 	display: flex;
 	justify-content: left;
 	align-items: center;
-	
 }
 
 .welcome-message-text {
 	overflow-wrap: break-word;
+	font-size: 4rem;
 	text-shadow: -0.5px -0.5px 0 #000, 0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000;
+}
+
+.overlay {
+	background-color: rgba(0, 0, 0, 0.4);
+	height: 20% !important;
 }
 
 @media only screen and (max-device-width: 776px) {
@@ -32,8 +37,8 @@
 	}
 	.welcome-message-text {
 		width: 80%;
+		font-size: 2.5rem;
 		text-align: center;
 		text-shadow: -0.5px -0.5px 0 #747474, 0.5px -0.5px 0 #747474, -0.5px 0.5px 0 #747474, 0.5px 0.5px 0 #747474;
-			
 	}
 }
